weatherapi added to Javascript

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </div>
         <div>
             <h2 id="todaysForecast">Today's Forcast</h2>
+            <div>
+                
+            </div>
         </div>
         <div>
 
