--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
         <h1>Weather Dashboard</h1>
     </header>
     <main>
-        <div id="searchBar">
+        <span id="searchBar">
             <h2>Search for a city:</h2>
             <input type="searchBar" placeholder="search" />
             <button id="">Search</button>
-        </div>
-        <div>
+        </span>
+        <span>
             <h2 id="todaysForecast">Today's Forcast</h2>
             <div>
-                
-            </div>
-        </div>
-        <div>
 
-        </div>
+            </div>
+        </span>
+        <span id="weatherDisplay">
+        </span>
     </main>
     <script href="./assets/js/script.js"></script>
 </body>
