--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     <main>
         <span id="searchBar">
             <h2>Search for a city:</h2>
-            <input id="searchCity" type="searchBar" placeholder="search" />
-            <button id="button">Search</button>
+            <div class="searcher">
+                <input id="searchCity" type="searchBar" placeholder="Enter City Name" />
+                <button class="searchBtn" id="button">Search</button>
+            </div>
+            <div>
+                <div class="history">
+                    <!-- insert cities searched -->
+                </div>
+            </div>
         </span>
         <span>
-            <h2 id="todaysForecast">This Week's Forcast</h2>
+            <h2 id="todaysForecast">Today in:<h2 class="city"></h2></h2>
             <div id="5-dayForecast">
                 <!-- insert weather forecast -->
             </div>
