--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
                 </div>
             </div>
         </span>
-        <span>
+        <span class="forecast">
             <h2 id="todaysForecast">Today in:<h2 class="city"></h2></h2>
-            <div id="5-dayForecast">
-                <!-- insert weather forecast -->
-            </div>
+            <!-- <div id="5-dayForecast">
+                 insert weather forecast 
+            </div> -->
         </span>
         <span id="weatherDisplay">
+            <!-- insert weather forecast -->
         </span>
     </main>
     <script src="./assets/js/script.js"></script>
