displaying city name successfully, added search history

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <button class="searchBtn" id="button">Search</button>
             </div>
             <div>
-                <div class="history">
+                <div id="history">
                     <!-- insert cities searched -->
                 </div>
             </div>
         </span>
         <span class="forecast">
-            <h2 id="todaysForecast">Today in:<h2 class="city"></h2></h2>
+            <h2 id="todaysForecast"></h2>
             <!-- <div id="5-dayForecast">
                  insert weather forecast 
             </div> -->
