--- a/index.html
+++ b/index.html
@@ -25,15 +25,56 @@
                 </div>
             </div>
         </span>
-        <span class="forecast">
-            <h2 id="todaysForecast"></h2>
-            <!-- <div id="5-dayForecast">
-                 insert weather forecast 
-            </div> -->
-        </span>
-        <span id="weatherDisplay">
+        <div class="forecast">
+            <div id="todaysForecast">
+                <p id="cityName"></p>
+                <p id="temp1"></p>
+                <p id="weatherIcon1"></p>
+                <p id="humidity1"></p>
+                <p id="windSpeeds1"></p>
+                <p id="date1"></p>
+            </div>
+            <div id="5-dayForecast">
+                <div id="day1">
+                    <p id="temp2"></p>
+                    <p id="weatherIcon2"></p>
+                    <p id="humidity2"></p>
+                    <p id="windSpeeds2"></p>
+                    <p id="date2"></p>
+                </div>
+                <div id="day2">
+                    <p id="temp3"></p>
+                    <p id="weatherIcon3"></p>
+                    <p id="humidity3"></p>
+                    <p id="windSpeeds3"></p>
+                    <p id="date3"></p>
+                </div>
+                <div id="day3">
+                    <p id="temp4"></p>
+                    <p id="weatherIcon4"></p>
+                    <p id="humidity4"></p>
+                    <p id="windSpeeds4"></p>
+                    <p id="date4"></p>
+                </div>
+                <div id="day4">
+                    <p id="temp5"></p>
+                    <p id="weatherIcon5"></p>
+                    <p id="humidity5"></p>
+                    <p id="windSpeeds5"></p>
+                    <p id="date5"></p>
+                </div>
+                <div id="day5">
+                    <p id="temp6"></p>
+                    <p id="weatherIcon6"></p>
+                    <p id="humidity6"></p>
+                    <p id="windSpeeds6"></p>
+                    <p id="date6"></p>
+                </div>
+            </div>
+        </div>
+        <div id="weatherDisplay">
             <!-- insert weather forecast -->
-        </span>
+        </div>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
