--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </span>
         <div class="forecast">
             <div id="todaysForecast">
-                <p id="cityName"></p>
+                <h2 id="cityName"></h2>
                 <p id="temp1"></p>
                 <p id="weatherIcon1"></p>
                 <p id="humidity1"></p>
@@ -71,9 +71,6 @@
                     <p id="date6"></p>
                 </div>
             </div>
-        </div>
-        <div id="weatherDisplay">
-            <!-- insert weather forecast -->
         </div>
     </main>
     <script src="./assets/js/script.js"></script>
